--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1635,6 +1635,10 @@ body {
   transition: 0.5s;
   -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
           box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
+  display: block;
+  width: 100%;
+  border-radius: 0;
+  margin-top: 1rem;
 }
 .template-wharf .add-to-cart.float {
   position: absolute;
@@ -1646,11 +1650,6 @@ body {
 }
 .template-wharf .add-to-cart.float:hover {
   opacity: 1;
-}
-@media (max-width: 1600px) {
-  .template-wharf .add-to-cart {
-    width: 75%;
-  }
 }
 @media (max-width: 500px) {
   .template-wharf .add-to-cart {
@@ -1665,6 +1664,13 @@ body {
 .template-wharf .add-to-cart:hover {
   opacity: 0.9;
 }
+.template-wharf .add-to-cart.sold-out {
+  background: #dadada !important;
+  color: black;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  opacity: 0.4;
+}
 .template-wharf .cart-icon-container .toast.toast-bootstrap {
   position: fixed;
   bottom: 8%;
@@ -1673,16 +1679,6 @@ body {
   -webkit-box-shadow: 1px 1px 20px rgba(158, 211, 90, 0.8);
           box-shadow: 1px 1px 20px rgba(158, 211, 90, 0.8);
   border: 0;
-}
-.template-wharf .cart-icon-container .toast.toast-bootstrap.toast-success{
-  background-color: rgba(158, 211, 90, 0.8);
-  -webkit-box-shadow: 1px 1px 20px rgba(158, 211, 90, 0.8);
-  box-shadow: 1px 1px 20px rgba(158, 211, 90, 0.8);
-}
-.template-wharf .cart-icon-container .toast.toast-bootstrap.toast-danger{
-  background-color: rgba(245, 166, 166, 0.8)!important;
-  -webkit-box-shadow: 1px 1px 20px rgba(245, 166, 166, 0.8)!important;
-  box-shadow: 1px 1px 20px rgba(245, 166, 166, 0.8)!important;
 }
 .template-wharf .cart-icon-container .toast.toast-bootstrap .toast-body {
   background: transparent;
@@ -1800,38 +1796,6 @@ body {
 .template-wharf .cart-list .cart-item .column-1 .product-name {
   text-transform: capitalize;
 }
-.template-wharf .cart-list .cart-item .column-2 .counter {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-.template-wharf .cart-list .cart-item .column-2 .counter .counter-trigger {
-  height: 100%;
-  padding: 5px 10px;
-  background-color: #eee;
-  cursor: pointer;
-}
-.template-wharf .cart-list .cart-item .column-2 .counter .counter-trigger.counter-minus {
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-.template-wharf .cart-list .cart-item .column-2 .counter .counter-trigger.counter-minus:hover {
-  background-color: #dadada;
-}
-.template-wharf .cart-list .cart-item .column-2 .counter .counter-trigger.counter-plus {
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-}
-.template-wharf .cart-list .cart-item .column-2 .counter .counter-trigger.counter-plus:hover {
-  background-color: #dadada;
-}
-.template-wharf .cart-list .cart-item .column-2 .counter input {
-  height: 38px;
-  border: 0;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #eee;
-  text-align: center;
-}
 .template-wharf .cart-list .cart-item .column-3 {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1862,8 +1826,69 @@ body {
 .template-wharf .cart-list .cart-item .column-3 .remove-item:hover {
   background-color: #e9605c;
 }
+.template-wharf .cart-list .counter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.template-wharf .cart-list .counter .counter-trigger {
+  height: 100%;
+  padding: 5px 10px;
+  background-color: #eee;
+  cursor: pointer;
+}
+.template-wharf .cart-list .counter .counter-trigger.counter-minus {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+.template-wharf .cart-list .counter .counter-trigger.counter-minus:hover {
+  background-color: #dadada;
+}
+.template-wharf .cart-list .counter .counter-trigger.counter-plus {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.template-wharf .cart-list .counter .counter-trigger.counter-plus:hover {
+  background-color: #dadada;
+}
+.template-wharf .cart-list .counter input {
+  height: 38px;
+  border: 0;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  text-align: center;
+}
+.template-wharf .cart-list.btn-group {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media (max-width: 992px) {
+  .template-wharf .cart-list.btn-group {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+.template-wharf .cart-list.btn-group .add-to-cart {
+  margin-left: 1rem;
+}
+@media (max-width: 992px) {
+  .template-wharf .cart-list.btn-group .add-to-cart {
+    margin-left: 0;
+    margin-top: 1rem !important;
+  }
+}
 .template-wharf .product-detail .ibox-content {
   position: relative;
+}
+@media (max-width: 992px) {
+  .template-wharf .product-detail .product-images {
+    margin: 0;
+    margin-bottom: 1rem;
+  }
 }
 .template-wharf .product-detail .image-imitation {
   padding: 0;
@@ -1888,6 +1913,7 @@ body {
   color: #fff;
   padding: 10px;
   font-size: 1.2rem;
+  z-index: 1;
 }
 .template-wharf .product-detail .content {
   font-size: 0.9rem;
@@ -1987,6 +2013,86 @@ body {
 .template-wharf .order-list .order-item .card-body .status-list i {
   opacity: 0.7;
 }
+.template-wharf .order-list .order-item .card-body .status-list.version-2 ul {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 80%;
+}
+.template-wharf .order-list .order-item .card-body .status-list.version-2 ul li {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  width: calc(100%/5);
+}
+.template-wharf .order-list .order-item .card-body .status-list.version-2 ul li:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: #dadada;
+  top: 38%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+.template-wharf .order-list .order-item .card-body .status-list.version-2 ul li .icon {
+  position: relative;
+  background-color: #fff;
+  border: 2px solid #dadada;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 10px;
+}
+.template-wharf .order-list .order-item .card-body .status-list.version-2 ul li .icon img {
+  -webkit-filter: grayscale(2);
+          filter: grayscale(2);
+}
+.template-wharf .order-list .order-item .card-body .status-list.version-2 ul li .label {
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 0.7rem;
+  text-transform: uppercase;
+  color: #ccc;
+}
+.template-wharf .order-list .order-item .card-body .status-list.version-2 ul li.highlighted:before {
+  background-color: #9ed35a;
+}
+.template-wharf .order-list .order-item .card-body .status-list.version-2 ul li.highlighted .icon {
+  border-color: #9ed35a;
+}
+.template-wharf .order-list .order-item .card-body .status-list.version-2 ul li.highlighted .icon img {
+  -webkit-filter: none;
+          filter: none;
+}
+.template-wharf .order-list .order-item .card-body .status-list.version-2 ul li.highlighted .label {
+  color: #9ed35a;
+}
 .template-wharf .order-list .order-item .ibox-content {
   padding: 1rem 0;
   border: 0;
@@ -2077,6 +2183,34 @@ body {
       -ms-flex-positive: 1;
           flex-grow: 1;
 }
+.template-wharf .order-list .order-item .item-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 2rem;
+  padding: 1rem 1.5rem;
+}
+.template-wharf .order-list .order-item .item-footer .status {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.template-wharf .order-list .order-item .item-footer .status.text-muted {
+  opacity: 0.8;
+}
+.template-wharf .order-list .order-item .item-footer .grand-total {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.template-wharf .order-list .order-item .item-footer .grand-total .num {
+  margin-left: 2rem;
+}
 .template-wharf .status-history .order-placed {
   background-color: #fef4ea !important;
 }
@@ -2121,7 +2255,11 @@ body {
   padding: 1rem;
   -webkit-box-shadow: -1px -1px 10px rgba(0, 0, 0, 0.2);
           box-shadow: -1px -1px 10px rgba(0, 0, 0, 0.2);
-  display: none;
+}
+@media (max-width: 992px) {
+  .template-wharf .banner-section .tagline {
+    padding: 10px;
+  }
 }
 .template-wharf .banner-section .tagline h1, .template-wharf .banner-section .tagline h3 {
   margin: 0;
@@ -2135,9 +2273,22 @@ body {
   padding: 10px 0;
   margin-bottom: 10px;
 }
+@media (max-width: 992px) {
+  .template-wharf .banner-section .tagline h1 {
+    font-size: 1.8rem;
+  }
+}
 .template-wharf .banner-section .tagline h3 {
   font-size: 1.2rem;
   font-weight: 400;
+}
+@media (max-width: 992px) {
+  .template-wharf .banner-section .tagline h3 {
+    font-size: 1rem;
+  }
+}
+.template-wharf .banner-section .banner-container-mobile {
+  margin-bottom: 1rem;
 }
 .template-wharf .banner-section .banner-container {
   position: relative;
@@ -2159,21 +2310,29 @@ body {
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  display: block;
 }
 .template-wharf .marketplace-container {
+  position: relative;
   width: 99%;
   margin: auto;
-  margin-top: -3rem;
+  margin-top: -2rem;
   margin-bottom: 2rem;
   background-color: rgba(255, 255, 255, 0.9);
   padding: 1rem 0;
   -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
           box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
+  margin-top: 1rem;
+  width: 100%;
 }
 @media (max-width: 992px) {
   .template-wharf .marketplace-container {
-    margin-top: 0;
+    background-color: transparent;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    width: 100%;
+  }
+  .template-wharf .marketplace-container .col-12 {
+    padding: 0;
   }
 }
 .template-wharf .filters .form-group {
@@ -2184,9 +2343,17 @@ body {
   border-top: 0;
 }
 .template-wharf .filters .form-group label {
-  /*font-weight: bold;*/
-  cursor: pointer;
-  display: inherit;
+  font-weight: bold;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
 }
 .template-wharf .filters .form-group ul {
   padding: 0;
@@ -2236,7 +2403,6 @@ body {
 .template-wharf .filters .form-group ul li > ul li:hover {
   opacity: 0.8;
 }
-.template-wharf .filters .form-group ul li.active img ,
 .template-wharf .filters .form-group ul li:hover img {
   background-color: #9ed35a;
 }
