--- a/resources/sass/pages/_wharf.scss
+++ b/resources/sass/pages/_wharf.scss
@@ -1110,9 +1110,15 @@
             }
           }
 
-          &:hover {
+          &.active, &:hover {
             img {
               background-color: $primary-1;
+            }
+          }
+
+          &.active {
+            .gr {
+              color: $primary-1;
             }
           }
 
