update wharf ui

--- a/resources/sass/pages/_wharf.scss
+++ b/resources/sass/pages/_wharf.scss
@@ -1107,6 +1107,10 @@
               &:hover {
                 opacity: .8;
               }
+
+              &.active {
+                color: $primary-1;
+              }
             }
           }
 
