--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2403,6 +2403,9 @@ body {
 .template-wharf .filters .form-group ul li > ul li:hover {
   opacity: 0.8;
 }
+.template-wharf .filters .form-group ul li > ul li.active {
+  color: #9ed35a;
+}
 .template-wharf .filters .form-group ul li.active img, .template-wharf .filters .form-group ul li:hover img {
   background-color: #9ed35a;
 }
