--- a/resources/sass/landing/inc/_partials.scss
+++ b/resources/sass/landing/inc/_partials.scss
@@ -125,22 +125,38 @@ header {
     }
   }
 
-  .btn-login {
-    background-color: transparent;
+  .btn-login, .btn-register {
     border: 1px solid $black;
     padding: 5px 2rem;
     border-radius: 5px;
     color: $black;
     text-decoration: none;
     margin: 10px;
-    margin-left: 2rem;
     transition: .3s;
 
     &:hover {
-      background-color: $color-1;
-      border: 1px solid $color-1;
       box-shadow: 1px 1px 10px rgba($color-1, .8);
+    }
+  }
+
+  .btn-login {
+    margin-left: 2rem;
+
+    &:hover {
+      background-color: $color-1;
+      border-color: $color-1;
       color: $white;
+    }
+  }
+
+  .btn-register {
+    background-color: $color-2;
+    color: $white;
+    border-color: $color-3;
+
+    &:hover {
+      background-color: $color-1;
+      box-shadow: 1px 1px 10px rgba($color-1, .8);
     }
   }
 
