--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -141,35 +141,46 @@ body {
   display: none;
 }
 
-.mini-navbar .navbar-default .version .short {
+body.mini-navbar .navbar-default .version .short {
   display: block;
 }
-.mini-navbar .navbar-default .version .long {
+body.mini-navbar .navbar-default .version .long {
   display: none;
 }
-.mini-navbar #side-menu li a:not(.dropdown-item) {
+body.mini-navbar #side-menu li a:not(.dropdown-item) {
   text-align: center;
 }
-.mini-navbar #side-menu li a:not(.dropdown-item) i {
+body.mini-navbar #side-menu li a:not(.dropdown-item) i {
   margin-right: 0;
 }
-.mini-navbar .dropdown-menu .name {
+body.mini-navbar .dropdown-menu .name {
   display: block;
 }
-.mini-navbar .profile-name {
+body.mini-navbar .profile-name {
   display: none !important;
 }
-.mini-navbar .dropdown-toggle:after {
+body.mini-navbar .dropdown-toggle:after {
   bottom: 0;
   top: auto;
-  right: 30px;
+  right: 44px;
 }
-.mini-navbar .round-circle-1 {
+body.mini-navbar .round-circle-1 {
   display: none;
 }
-.mini-navbar .round-circle-2 {
+body.mini-navbar .round-circle-2 {
   display: block !important;
   padding: 1rem 0;
+}
+body.mini-navbar .navbar-static-side {
+  width: 100px !important;
+}
+body.mini-navbar .nav-label {
+  display: block !important;
+  font-size: 0.8rem;
+  line-height: 14px;
+}
+body.mini-navbar li.active .nav-second-level {
+  left: 99px;
 }
 
 .nav.navbar-right .btn-logout {
